--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="author" content="Jose Antonio  Gonzalez Rodriguez" />
-    <meta name="description" content="useCustomHook" />
+    <meta name="description" content="useDarkTheme" />
     <meta name="theme-color" content="#262626" />
     <meta name="keywords" content="React, Hooks" />
     <meta
@@ -14,9 +14,35 @@
       http-equiv="Content-Security-Policy"
       content="upgrade-insecure-requests"
     />
-    <title>useCustomHook</title>
+    <title>useDarkTheme</title>
   </head>
   <body>
     <div id="app" role="main" />
+    <script>
+      let darkScheme = null
+      const storageKey = 'useDarkTheme'
+      const darkClass = 'dark'
+      const lightClass = 'light'
+      const localTheme = window.localStorage.getItem(storageKey)
+
+      function setTheme(theme) {
+        const addClass = theme === 'dark' ? darkClass : lightClass
+        const removeClass = theme === 'dark' ? lightClass : darkClass
+        document.body.classList.add(addClass)
+        document.body.classList.remove(removeClass)
+      }
+
+      if (window.matchMedia) {
+        darkScheme = window.matchMedia('(prefers-color-scheme: dark)')
+      }
+
+      if (localTheme) {
+        setTheme(localTheme)
+      } else if (darkScheme) {
+        setTheme(darkScheme.matches ? 'dark' : 'light')
+      } else {
+        setTheme('light')
+      }
+    </script>
   </body>
 </html>
